Removed payload sharing characteristic - Unvalidated